--- a/Kata.Tests/Kata.Tests.csproj
+++ b/Kata.Tests/Kata.Tests.csproj
@@ -6,4 +6,9 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.NET.Test.Sdk" Version="18.0.1" />
+      <PackageReference Include="NUnit" Version="4.4.0" />
+    </ItemGroup>
+
 </Project>
