--- a/Kata.Tests/Kata.Tests.csproj
+++ b/Kata.Tests/Kata.Tests.csproj
@@ -11,4 +11,8 @@
       <PackageReference Include="NUnit" Version="4.4.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Kata.Checkout\Kata.Checkout.csproj" />
+    </ItemGroup>
+
 </Project>
